re PR c++/42115 (r154072 & r154073 break build of ppl, non-placement deallocation issue)

PR c++/42115
	* call.c (build_op_delete_call): Don't complain about using
	op delete (void *, size_t) for placement delete if there's an
	op delete (void *).

From-SVN: r154357